--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -8,7 +8,7 @@
     tools:context=".activity.ProductListActivity">
 
     <include
-        layout="@layout/app_bar_compare"/>
+        layout="@layout/app_bar_main"/>
 
         <FrameLayout
             android:id="@+id/container"
