--- a/app/src/main/res/layout/list_item_time_slot.xml
+++ b/app/src/main/res/layout/list_item_time_slot.xml
@@ -3,6 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     xmlns:tools="http://schemas.android.com/tools">
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
@@ -14,8 +18,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:gravity="center"
         tools:text="@string/app_name"
-        android:textSize="20sp"
-        android:padding="16dp"/>
+        android:textSize="20sp"/>
 
     <View
         android:layout_width="0dp"
@@ -23,5 +26,6 @@
         android:background="@color/graySelect"
         app:layout_constraintTop_toBottomOf="@+id/tv_time_slot"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"/>
 </android.support.constraint.ConstraintLayout>
