--- a/app/src/main/res/layout/time_slot_dialog_fragment.xml
+++ b/app/src/main/res/layout/time_slot_dialog_fragment.xml
@@ -10,6 +10,9 @@
         android:id="@+id/time_slot_recycler"
         android:layout_width="450dp"
         android:layout_height="250dp"
-        android:padding="16dp"/>
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:clipToPadding="false"
+        />
 
 </android.support.v7.widget.CardView>
