--- a/app/src/main/res/layout/view_auto_complete_text.xml
+++ b/app/src/main/res/layout/view_auto_complete_text.xml
@@ -29,11 +29,12 @@
     </LinearLayout>
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/inputTextLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:theme="@style/Form.EditTextLayoutTheme"
-        android:background="@drawable/border_grey"
+        android:background="@drawable/bg_input_enable"
         android:focusableInTouchMode="true">
 
         <android.support.v7.widget.AppCompatAutoCompleteTextView
