--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,7 +33,9 @@
     <color name="divider">#FFECECEC</color>
     <color name="disableButton">#f2f2f2</color>
 
+    <color name="disableInput">#3dffefc3</color>
     <color name="white80">#b9ffffff</color>
+    <color name="gray">#e0e0e0</color>
     <color name="lightGray">#e7e7e7</color>
     <color name="lightgray02">#bfbfbf</color>
     <color name="passwordIconColor">#FF9A9A9A</color>
