--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -192,7 +192,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@color/lightgray02"
+        android:background="@color/lightGray2"
         app:layout_constraintTop_toBottomOf="@+id/recycler_view_list"
         app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center">
