--- a/app/src/main/res/layout/activity_product_detail2.xml
+++ b/app/src/main/res/layout/activity_product_detail2.xml
@@ -65,6 +65,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/actionbar" />
-    <!-- region content-->
+    <!-- endregion content-->
+
+    <cenergy.central.com.pwb_store.view.NetworkStateView
+        android:id="@+id/networkStateView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/actionbar"/>
 
 </android.support.constraint.ConstraintLayout>
