--- a/app/src/main/res/layout/activity_product_list.xml
+++ b/app/src/main/res/layout/activity_product_list.xml
@@ -17,5 +17,11 @@
             android:background="@color/powerBuyWhite"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
+    <cenergy.central.com.pwb_store.view.NetworkStateView
+        android:id="@+id/network_state_View"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
 </android.support.design.widget.CoordinatorLayout>
 
