--- a/app/src/main/res/layout/app_bar_avaliable.xml
+++ b/app/src/main/res/layout/app_bar_avaliable.xml
@@ -38,14 +38,22 @@
             android:layout_gravity="center"
             android:src="@mipmap/ic_logo"/>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_gravity="end"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/ic_search_bar"
-            />
+        <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_centerInParent="true"-->
+            <!--android:layout_gravity="end"-->
+            <!--android:layout_marginRight="10dp"-->
+            <!--android:src="@drawable/ic_search_bar"-->
+            <!--/>-->
+
+        <!--<cenergy.central.com.pwb_store.view.LanguageButton-->
+            <!--android:id="@+id/switch_language_button"-->
+            <!--android:layout_width="96dp"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="end|center_vertical"-->
+            <!--android:layout_margin="8dp" />-->
+
     </android.support.v7.widget.Toolbar>
 </android.support.design.widget.AppBarLayout>
 
