--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -42,6 +42,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
+            android:background="@color/powerBuyWhite"
             android:clipToPadding="false"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
@@ -88,7 +89,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="16dp"
-            android:background="@color/lightGray"
+            android:background="@color/gray"
             android:gravity="center"
             android:orientation="horizontal"
             android:padding="8dp"
