--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -190,7 +190,7 @@
                     style="@style/RaisedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/payment_header"
+                    android:text="@string/check_out"
                     android:textColor="@android:color/white"
                     android:textSize="14sp"
                     app:typeFaceAsset="RobotoLight.ttf" />
