--- a/app/src/main/res/drawable/background_splash_screen.xml
+++ b/app/src/main/res/drawable/background_splash_screen.xml
@@ -8,11 +8,11 @@
     <!--</item>-->
 <!--</layer-list>-->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/powerBuyPurple"/>
+    <item android:drawable="@color/colorPrimary"/>
         <item>
             <bitmap
                 android:gravity="center"
-                android:src="@mipmap/ic_logo"/>
+                android:src="@mipmap/ic_launcher"/>
         </item>
 
 </layer-list>
