--- a/app/src/main/res/layout/app_bar_payment.xml
+++ b/app/src/main/res/layout/app_bar_payment.xml
@@ -27,7 +27,7 @@
             android:layout_width="56dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:src="@mipmap/ic_logo"
+            android:src="@mipmap/ic_launcher"
             android:contentDescription="@string/app_name" />
 
         <cenergy.central.com.pwb_store.view.LanguageButton
