--- a/app/src/main/res/layout/app_bar_product.xml
+++ b/app/src/main/res/layout/app_bar_product.xml
@@ -26,7 +26,7 @@
             android:layout_width="56dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:src="@mipmap/ic_logo"/>
+            android:src="@mipmap/ic_launcher"/>
 
         <cenergy.central.com.pwb_store.view.LanguageButton
             android:id="@+id/switch_language_button"
