--- a/app/src/main/res/layout/app_bar_web.xml
+++ b/app/src/main/res/layout/app_bar_web.xml
@@ -26,7 +26,7 @@
             android:layout_width="56dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:src="@mipmap/ic_logo"/>
+            android:src="@mipmap/ic_launcher"/>
 
         <ImageView
             android:layout_width="wrap_content"
