--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -19,7 +19,7 @@
         android:layout_height="32dp"
         android:layout_gravity="center"
         android:layout_marginLeft="10dp"
-        android:src="@mipmap/ic_logo"/>
+        android:src="@mipmap/ic_launcher"/>
 
     <TextView
         android:id="@+id/txt_view_sign_in"
