--- a/app/src/main/res/layout/list_item_playment_types.xml
+++ b/app/src/main/res/layout/list_item_playment_types.xml
@@ -3,18 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginEnd="16dp"
-    android:layout_marginBottom="8dp">
+    android:layout_height="wrap_content">
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
-        android:id="@+id/tv_time_slot"
-        android:layout_width="0dp"
+        android:id="@+id/txt_description"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="20sp"
+        android:padding="16dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,9 +20,8 @@
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginTop="16dp"
         android:background="@color/graySelect"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_time_slot" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_description" />
 </android.support.constraint.ConstraintLayout>
