--- a/app/src/main/res/layout/payment_types_dialog_fragment.xml
+++ b/app/src/main/res/layout/payment_types_dialog_fragment.xml
@@ -31,7 +31,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="150dp"
             app:layout_constraintTop_toBottomOf="@+id/title_dialog_fragment"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
