--- a/app/src/cds/res/layout/drawer_user.xml
+++ b/app/src/cds/res/layout/drawer_user.xml
@@ -4,7 +4,7 @@
     android:id="@+id/layout_header_user"
     android:layout_width="match_parent"
     android:layout_height="130dp"
-    android:background="@color/powerBuyPurple"
+    android:background="@color/colorPrimaryRed"
     android:orientation="horizontal"
     android:paddingStart="16dp"
     android:paddingLeft="16dp"
@@ -53,13 +53,4 @@
             tools:text="Central World" />
 
     </LinearLayout>
-
-    <!--<ImageView-->
-    <!--android:id="@+id/img_arrow_next"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_gravity="center_vertical"-->
-    <!--android:src="@drawable/ic_arrow_next"-->
-    <!--android:contentDescription="@string/app_name" />-->
-
 </LinearLayout>
