--- a/app/src/main/res/drawable/bg_purple_out_line.xml
+++ b/app/src/main/res/drawable/bg_purple_out_line.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="32dp" />
-    <solid android:color="@color/powerBuyPurple" />
+    <solid android:color="@color/colorPrimary" />
     <stroke
         android:width="1dp"
         android:color="@color/powerBuyWhite" />
