--- a/app/src/main/res/layout/fragment_payment_select_methods.xml
+++ b/app/src/main/res/layout/fragment_payment_select_methods.xml
@@ -2,29 +2,27 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/powerBuyWhite">
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/title_select_methods"
-        style="@style/textPaymentHeader"
-        android:layout_width="match_parent"
+        style="@style/textCompare"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="start"
-        android:padding="16dp"
+        android:layout_margin="16dp"
         android:text="@string/select_payment_types"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/recycler_select_methods"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_select_methods"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/title_select_methods"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-
-    </android.support.v7.widget.RecyclerView>
-
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
