--- a/app/src/main/res/layout/list_item_delivery_options.xml
+++ b/app/src/main/res/layout/list_item_delivery_options.xml
@@ -20,6 +20,8 @@
         android:layout_width="36dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_carrier_title"
+        app:layout_constraintEnd_toStartOf="@id/tv_carrier_title"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_carrier_title"
         tools:src="@drawable/ic_store" />
 
@@ -46,10 +48,10 @@
         android:padding="16dp"
         android:text="@string/choose"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/tv_amount"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_carrier_title"
-        app:layout_constraintBottom_toTopOf="@id/tv_amount" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <cenergy.central.com.pwb_store.view.PowerBuyTextView
         android:id="@+id/tv_amount"
@@ -61,9 +63,9 @@
         android:gravity="end"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/option_line"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/guild_line_50"
-        app:layout_constraintBottom_toTopOf="@id/option_line"
         tools:text="amount" />
 
     <TextView
@@ -84,5 +86,7 @@
         android:layout_marginTop="64dp"
         android:background="@color/graySelect"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_method_title"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_method_title" />
 </android.support.constraint.ConstraintLayout>
